# python-dojo

./: .gitignore  README.md
alphabet-rangoli/: README.md  main.py
cartesian-product/: main.py
check-alphanum/: main.py
command-list/: main.py
counter-collection/: main.py
divmod/: README.md  main.py
garbage-collector/: main.py
goat-book/: functional_test.py
hackerhank-logo/: main.py
hk-average/: README.md  main.py
hk-calendar/: README.md  main.py
hk-combinations/: README.md  main.py
hk-company-logo/: README.md  main.py
hk-defaultdict/: README.md  main.py
hk-email-validator/: README.md  main.py  test_case.txt
hk-exceptions/: README.md  main.py
hk-float-detector/: README.md  main.py
hk-ginorts/: README.md  main.py
hk-iterator-iterables/: README.md  main.py
hk-maximize-it/: README.md  main.py  test_case.txt
hk-namedtuple/: README.md  main.py
hk-ordered-dict/: README.md  main.py
hk-piling-numbers/: README.md  main.py  test_case.txt
hk-polinomials/: README.md  pyproject.toml
hk-polinomials/hk_polinomials/: main.py
hk-regex-check/: README.md  main.py
hk-set-add/: README.md  main.py
hk-set-operations/: README.md  main.py
hk-set-union/: README.md  main.py
hk-symmetric-difference/: README.md  main.py
hk-timedelta/: README.md  main.py
hk-word-order/: README.md  main.py
hk-xml-max-depth/: README.md  main.py
mat-maker/: main.py
minion_game/: README.md  main.py
number-formatting/: main.py
number-guessing/: number-guessing.py
pdf-diff/: pdf-diff.py
permutations/: README.md  main.py
polar-cordinates/: README.md  (+1 more)
(+23 files in other folders)
