[project]
name = "hk-polinomials"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Iago",email = "antonio.iagolg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
